[package]
name = "devlog-tracing"
version = "0.1.0"
edition = "2021"
authors = ["hermannm"]
license = "MIT"
description = "Log subscriber for the tracing library, with a human-readable output format designed for development builds."

[dependencies]
chrono = "0.4.38"
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-subscriber = "0.3.18"
